优化和部分bug修复